--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link rel="icon" type="image/png" sizes="32x32" href="static/fonts/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/fonts/favicon-16x16.png">
     <link rel="manifest" href="static/fonts/site.webmanifest">
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7100084430986240"
+     crossorigin="anonymous"></script>
+    
     <title>DYSSH №10 Головна</title>
 </head>
 
